--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -91,6 +91,8 @@ jobs:
 
     - name: Code sign a file
       uses: dlemstra/code-sign-action@v1
+      with:
+        certificate: '${{ secrets.CERTIFICATE }}'
             
     # Decode the base 64 encoded pfx and save the Signing_Certificate
     - name: Decode the pfx
